Small adjustment to top padding on <main> to correct cut off page titles

--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ a.text-warning:focus {
 
 main {
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.03), 0 2px 2px 0 rgba(0, 0, 0, 0.1);
-  padding-top:110px !important;
+  //padding-top:110px !important;
 }
 
 #nav .dropdown-toggle::after {
@@ -596,7 +596,7 @@ footer{
 
 main{
 	/* padding-top:110px !important; */
-	padding-top: 105px !important;
+	padding-top: 145px !important;
  }
 .form-group label, #wpcf7-f147-p47-o1{
 	width:100%;
